plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

tasks.withType(JavaCompile) {
	options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
	jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
	jvmArgs += '--enable-preview'
}


repositories {
	mavenCentral()
}

dependencies {
	compileOnly "org.glassfish.jaxb:jaxb-runtime:4.0.4"


	implementation 'de.codecentric:spring-boot-admin-client'
	implementation 'de.codecentric:spring-boot-admin-starter-client:3.2.2'
	implementation 'org.springframework.boot:spring-boot-starter'
	// https://mvnrepository.com/artifact/org.springframework/spring-web
	implementation 'org.springframework:spring-web:6.1.4'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.2.3'
	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.2.2'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// https://mvnrepository.com/artifact/org.jolokia/jolokia-client-java
	implementation 'org.jolokia:jolokia-support-spring:2.0.2'
	// https://mvnrepository.com/artifact/org.jolokia/jolokia-example-spring-boot
	implementation 'org.jolokia:jolokia-example-spring-boot:2.0.2'


}

